/*
 * $Id: ChangeLog,v 1.76 2002/02/02 10:50:46 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2002-02-04 02:23 UTC-0300 Horacio Roldan <harbour_ar@yahoo.com.ar>
   * source/rdd/dbf1.c
     ! fixed bug with flags in hb_dbfGoTo

2002-02-20 08:50 UTC-0300 Luiz Rafael Culik <culik@sl.conex.net>
  * source/rtl/isprint.c
    * Fixes for cygwin
  * utils/hbmake/hbmake.prg
    utils/hbmake/hbmutils.prg
      *Enhaced support for big make files

2002-02-01 15:45 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbfast.h
  * source/vm/fastitem.c
    + Added USHORT hb_itemArrayCyclicCount( PHB_ITEM pArray );
    + Added USHORT hb_itemArrayCyclicCountWorker( PHB_BASEARRAY pArray, PHB_SCANNED_ARRAYS pScannedList, PHB_BASEARRAY pTopBaseArray );
    + Added HB_FUNC( ARRAYCYCLICCOUNT )
  * source/vm/arrays.c
    * Added test of memvar in hb_arrayReleaseGarbage.
  * source/vm/estack.c
    * Trace added.

2002-01-31 19:47 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/garbage.c
    * Corrected typo in erased line.

2002-01-31 17:15 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rdd/workarea.c
    * Added missing typecasts required by VC

2002-01-31 17:08 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/arrays.c
    * Corrected typo.

2002-01-31 17:05 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * bin/!pack_bin.bat
  * bin/bld.bat
    * Minor adjustements.
  * source/vm/codebloc.c
    * Added missing null.
  * source/vm/arrays.c
    * Optimized hb_itemClear() to hb_itemRelease() in hb_arrayReleaseGarbage()

2002-01-31 14:22 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rdd/workarea.c
    * Minor correction to recent correction of string conversion.

2002-01-31 08:40 UTC-0300 Horacio Roldan <harbour_ar@yahoo.com.ar>
   * source/rdd/dbfcdx1.c
     ! fixed bug with append and empty keys
